// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/RadioButtonGroup Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 kSZjsO sc-flMpop bTydnJ sc-eWVLlQ eyPIkt"
      role="radiogroup"
    >
      <label
        class="StyledRadioButton__StyledRadioButtonContainer-g1f6ld-0 bsbPNu"
        for="plain 1"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 kqpbkf StyledRadioButton-g1f6ld-5 MBaYF"
        >
          <input
            checked=""
            class="StyledRadioButton__StyledRadioButtonInput-g1f6ld-1 kTMaqq"
            id="plain 1"
            name="radio button group"
            tabindex="0"
            type="radio"
            value="plain 1"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 gZVniw StyledRadioButton__StyledRadioButtonBox-g1f6ld-4 bOYFlj"
          >
            <svg
              class="StyledRadioButton__StyledRadioButtonIcon-g1f6ld-3 ieBzqo"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24"
            >
              <circle
                cx="12"
                cy="12"
                r="6"
              />
            </svg>
          </div>
        </div>
        <span
          class="StyledRadioButton__StyledRadioButtonLabel-g1f6ld-2"
        >
          plain 1
        </span>
      </label>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 cNVajf"
      />
      <label
        class="StyledRadioButton__StyledRadioButtonContainer-g1f6ld-0 bsbPNu"
        for="plain 2"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 kqpbkf StyledRadioButton-g1f6ld-5 MBaYF"
        >
          <input
            class="StyledRadioButton__StyledRadioButtonInput-g1f6ld-1 kTMaqq"
            id="plain 2"
            name="radio button group"
            tabindex="-1"
            type="radio"
            value="plain 2"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 gioviw StyledRadioButton__StyledRadioButtonBox-g1f6ld-4 bOYFlj"
          />
        </div>
        <span
          class="StyledRadioButton__StyledRadioButtonLabel-g1f6ld-2"
        >
          plain 2
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/RadioButtonGroup With Expanded Options 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 kSZjsO sc-flMpop a-DbsF sc-eWVLlQ eyPIkt"
      role="radiogroup"
    >
      <label
        class="StyledRadioButton__StyledRadioButtonContainer-g1f6ld-0 emmNdn"
        disabled=""
      >
        <div
          class="StyledBox-sc-13pk1d4-0 kqpbkf StyledRadioButton-g1f6ld-5 MBaYF"
        >
          <input
            class="StyledRadioButton__StyledRadioButtonInput-g1f6ld-1 fUKAsy"
            disabled=""
            name="radio button group"
            tabindex="-1"
            type="radio"
            value="disabled"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 gioviw StyledRadioButton__StyledRadioButtonBox-g1f6ld-4 bOYFlj"
          />
        </div>
        <span
          class="StyledRadioButton__StyledRadioButtonLabel-g1f6ld-2"
        >
          disabled
        </span>
      </label>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 cNVajf"
      />
      <label
        class="StyledRadioButton__StyledRadioButtonContainer-g1f6ld-0 bsbPNu"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 kqpbkf StyledRadioButton-g1f6ld-5 MBaYF"
        >
          <input
            class="StyledRadioButton__StyledRadioButtonInput-g1f6ld-1 kTMaqq"
            name="radio button group"
            tabindex="-1"
            type="radio"
            value="enabled"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 gioviw StyledRadioButton__StyledRadioButtonBox-g1f6ld-4 bOYFlj"
          />
        </div>
        <span
          class="StyledRadioButton__StyledRadioButtonLabel-g1f6ld-2"
        >
          enabled
        </span>
      </label>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 cNVajf"
      />
      <label
        class="StyledRadioButton__StyledRadioButtonContainer-g1f6ld-0 bsbPNu"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 kqpbkf StyledRadioButton-g1f6ld-5 MBaYF"
        >
          <input
            checked=""
            class="StyledRadioButton__StyledRadioButtonInput-g1f6ld-1 kTMaqq"
            name="radio button group"
            tabindex="0"
            type="radio"
            value="selected"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 gZVniw StyledRadioButton__StyledRadioButtonBox-g1f6ld-4 bOYFlj"
          >
            <svg
              class="StyledRadioButton__StyledRadioButtonIcon-g1f6ld-3 ieBzqo"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24"
            >
              <circle
                cx="12"
                cy="12"
                r="6"
              />
            </svg>
          </div>
        </div>
        <span
          class="StyledRadioButton__StyledRadioButtonLabel-g1f6ld-2"
        >
          selected
        </span>
      </label>
    </div>
  </div>
</div>
`;
